objects/CCMS_OS_Versions__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_DB_Id__c</fullName>
        <externalId>true</externalId>
        <label>CCMS DB Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCMS_OS_Version__c</fullName>
        <label>CCMS OS Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_OS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCMS OS</label>
        <referenceTo>CCMS_OS__c</referenceTo>
        <relationshipName>CCMS_OS_VERSIONS</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CCMS OS Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CCMS Versions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCMS OS Versions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>